This will add the nav bar in the index file

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -17,7 +17,7 @@
                 <a class="nav-link" href="#">Features</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="/allanimals/new">allanimals</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="#">Disabled</a>
@@ -59,7 +59,7 @@
                                                <!-- Card content -->
                                                <div class="card-body">
                                                    <!-- Link -->
-                                                   <h5>Add Animal </h5></a>
+                                                   <p><a class="btn btn-outline-primary" href="/newanimal/new">+ Add Animal</a></p>
 
                                                </div>
                                            </div>
@@ -83,7 +83,7 @@
                                                    <!-- Card content -->
                                                    <div class="card-body">
                                                        <!-- Link -->
-                                                       <h5>Add Animal </h5></a>
+                                                       <p><a class="btn btn-outline-primary" href="/newendangeredanimal/new">+ Add Animal</a></p>
 
                                                    </div>
                                                </div>
@@ -106,10 +106,11 @@
                                                    <!-- Card content -->
                                                    <div class="card-body">
                                                        <!-- Link -->
-                                                       <h5>Add Animal </h5></a>
+                                                       <p><a class="btn btn-outline-primary" href="newsighting/new">+ Add Animal</a></p>
 
                                                    </div>
                                                </div>
+                                               <p type="submit"> <a class="btn btn-outline-primary" href="/allanimals"> Create a new Squad.</a> </p>
 
 
 
