This will add the newsighting.hbs file styling

--- a/src/main/resources/templates/newsighting.hbs
+++ b/src/main/resources/templates/newsighting.hbs
@@ -15,7 +15,16 @@
                                 <div class="content">
                                     <h3 class="text-center">Add Animal</h3>
 
-                                    <form action="/newanimalsdetails/new" method="post">
+                                    <form action="/sightingdetails/new" method="post">
+                                        <div class="form-group">
+                                            <label for="animalName">Name of the Animal:</label>
+                                            <select id="animalName" name="animalName" type="text" class="form-control transparentInputFields">
+                                                <option value="Lion">Lion</option>
+                                                <option value="Hyena">Hyena</option>
+                                                <option value="Cheetah">Cheeteah</option>
+                                                <option value="Leopard">Leopard</option>
+                                            </select>
+                                        </div>
                                         <div class="form-group">
                                             <label for="location">Location:</label>
                                             <select id="location" name="location" type="text" class="form-control transparentInputFields">
