--- a/src/main/resources/templates/allanimals.hbs
+++ b/src/main/resources/templates/allanimals.hbs
@@ -1,25 +1,18 @@
 {{#partial "content"}}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-        </div>
+    <nav class="navbar navbar-expand-lg text-light bg-success">
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/index">Home <span class="sr-only">Home</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/sightingdetails/new">View Sighting</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/allanimals/new">View All Animals</a>
+            </li>
+        </ul>
+    </div>
     </nav>
 
 
@@ -34,15 +27,38 @@
                 <div class="col-md-12 mb-4 white-text text-center">
                     <div class="row">
                         <div class="col-sm-4 col-sm-offset-4">
-                            <a href="/animals/new"><button type="button" class="btn btn-primary">Add Animal</button></a>
-                            <a href="/endangered/new"><button type="button" class="btn btn-warning">Add Endangered Animal</button></a>
-                            <h3 class="hr-light text-monospace stylistsTitle text-warning">All Animals:</h3>
-                            //view all animals
-                            {{#each animals}}
 
-                                    <p class="" ><a href=""> <i class="fa fa-eye"></i></a>{{name}}{{health}} {{age}}</p>
+                            <a href="/newanimal/new"><button type="button" class="btn btn-primary">Add Animal</button></a>
+                            <a href="/newendangeredanimal/new"><button type="button" class="btn btn-warning">Add Endangered Animal</button></a>
+                            <h3 class="hr-light text-monospace stylistsTitle text-warning">All Animals:</h3>
+
+
+                            <table class="table table-light">
+                                <thead>
+                                <tr>
+                                    <th scope="col">Animal Name</th>
+                                    <th scope="col">Animal health</th>
+                                    <th scope="col">Age</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                            {{#each animals}}
+                            <tr>
+                               <td>{{name}}</td>
+                                <td>{{health}} </td>
+                                <td>{{age}}</td>
+
+
+                            </tr>
 
                             {{/each}}
+                            </tbody>
+
+                                </table>
+
+
+
+
 
 
                         </div>
