--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -3,24 +3,17 @@
 {{/partial}}
 
 {{#partial "content"}}
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+   <nav class="navbar navbar-expand-lg text-light bg-success">
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="i/ndex">Home <span class="sr-only">Home</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="/sightingdetails/new">View Sighting</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/allanimals/new">allanimals</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
+                <a class="nav-link" href="/allanimals/new">View All Animals</a>
             </li>
         </ul>
     </div>
@@ -36,7 +29,7 @@
            <div class="indexRow">
                <!--Grid column-->
                <div class="col-md-12 mb-4 white-text text-center">
-                   <h1 class="h1-reponsive text-warning text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 animate shake"><strong> Wildlife Tracker<i class="fas fa-satellite-dish animate rotateIn infinite"></i></strong></h1>
+                   <h1 class="h1-reponsive text-dark text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 animate shake"><strong> Wildlife Tracker<i class="fas fa-satellite-dish animate rotateIn infinite"></i></strong></h1>
                    <h4 class="text-monospace  typeClass"><strong id="type"></strong> <i class="fas fa-bolt"></i></h4>
                    <div class="container">
                        <!--Grid row-->
@@ -52,7 +45,7 @@
 
                                                <!-- Card image -->
                                                <div class="view overlay">
-                                                   <img class="card-img-top" src="/images/lion.jpg" alt="Card image cap">
+                                                   <img class="card-img-top" src="/images/lion.jpg" alt="Card image cap" height="200px">
 
                                                </div>
 
@@ -76,14 +69,14 @@
 
                                                    <!-- Card image -->
                                                    <div class="view overlay">
-                                                       <img class="card-img-top" src="/images/antelop.jpg" alt="Card image cap">
+                                                       <img class="card-img-top" src="/images/antelop.jpg" alt="Card image cap" height="200px">
 
                                                    </div>
 
                                                    <!-- Card content -->
                                                    <div class="card-body">
                                                        <!-- Link -->
-                                                       <p><a class="btn btn-outline-primary" href="/newendangeredanimal/new">+ Add Animal</a></p>
+                                                       <p><a class="btn btn-outline-primary" href="/newendangeredanimal/new">+ Add Endangered animal</a></p>
 
                                                    </div>
                                                </div>
@@ -99,18 +92,18 @@
 
                                                    <!-- Card image -->
                                                    <div class="view overlay">
-                                                       <img class="card-img-top" src="/images/ranger.jpg" alt="Card image cap">
+                                                       <img class="card-img-center" src="/images/ranger.jpg" alt="Card image cap" height="200px" width="300px">
 
                                                    </div>
 
                                                    <!-- Card content -->
                                                    <div class="card-body">
                                                        <!-- Link -->
-                                                       <p><a class="btn btn-outline-primary" href="newsighting/new">+ Add Animal</a></p>
+                                                       <p><a class="btn btn-outline-primary" href="newsighting/new">+ Add sighting</a></p>
 
                                                    </div>
                                                </div>
-                                               <p type="submit"> <a class="btn btn-outline-primary" href="/allanimals"> Create a new Squad.</a> </p>
+
 
 
 
