--- a/src/main/resources/templates/newsighting.hbs
+++ b/src/main/resources/templates/newsighting.hbs
@@ -1,4 +1,19 @@
 {{#partial "content"}}
+    <nav class="navbar navbar-expand-lg text-light bg-success">
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/index">Home <span class="sr-only">Home</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/sightingdetails/new">View Sighting</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/allanimals/new">View All Animals</a>
+            </li>
+        </ul>
+    </div>
+    </nav>
 
     <div class="view" style="background-image: url('/images/jaguar2.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
         <!-- Mask & flexbox options-->
