This will add the delete button

--- a/src/main/resources/templates/allanimals.hbs
+++ b/src/main/resources/templates/allanimals.hbs
@@ -39,6 +39,7 @@
                                     <th scope="col">Animal Name</th>
                                     <th scope="col">Animal health</th>
                                     <th scope="col">Age</th>
+                                    <th scope="col">Delete</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -47,6 +48,8 @@
                                <td>{{name}}</td>
                                 <td>{{health}} </td>
                                 <td>{{age}}</td>
+
+                              <td><a href="/animal/{{id}}/delete"> <button>Delete</button></a></td>
 
 
                             </tr>
