This will add the delete button

--- a/src/main/resources/templates/sightingdetails.hbs
+++ b/src/main/resources/templates/sightingdetails.hbs
@@ -35,6 +35,7 @@
                                 <th scope="col">Ranger Name</th>
                                 <th scope="col">Animal Name</th>
                                 <th scope="col">Time Seen</th>
+                                <th scope="col">Delete Sight</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -45,6 +46,7 @@
                                         <td>{{location}}</td>
                                         <td>{{ranger}}</td>
                                         <td>{{seen}}</td>
+                                        <td><a href="/sighting/{{id}}/delete">Delete</a></td>
                                     </tr>
 
 
